manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-lab
  template:
    metadata:
      labels:
        app: telemetry-lab
    spec:
      containers:
      - name: axion-telemetry-query-service
        image: akacr1212134.azurecr.io/axion-telemetry-query-service:v1       
        ports:
        -  containerPort: 8000
