manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-ser
spec:
  type: ClusterIP
  selector:
    app: telemetry-lab
  ports:
  - port: 80
    targetPort: 8000
